fixed contact spacing and changed color of placeholders

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,3 +166,30 @@ table   {
     border-collapse: separate;
     border-spacing: 20px 0;
 }
+
+:-ms-input-placeholder  {
+    color: lightgrey;
+}
+
+::placeholder   {
+    color: lightgrey;
+}
+
+::-ms-input-placeholder {
+    color: lightgrey;
+}
+
+.button {
+    background-color: #4aaaa5;
+    border: none;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    padding: 5px 20px 5px 20px;
+}
+
+input   {
+    margin-bottom: 12px;
+}
